@@ -3577,7 +3577,6 @@ void http_init(void)
     gw_assert(run_status == limbo);
 
 #ifdef HAVE_LIBSSL
-    openssl_init_locks();
     conn_init_ssl();
 #endif /* HAVE_LIBSSL */
     proxy_init();
@@ -3606,7 +3605,6 @@ void http_shutdown(void)
     port_shutdown();
     proxy_shutdown();
 #ifdef HAVE_LIBSSL
-    openssl_shutdown_locks();
     conn_shutdown_ssl();
     server_shutdown_ssl();
 #endif /* HAVE_LIBSSL */
