@@ -1,3 +1,6 @@
+2018-02-28 Alexander Malysh <amalysh at kannel.org>
+    * added support for openssl version > 1.1
+
 2018-02-14 Alexander Malysh <amalysh at kannel.org>
     * test/test_http.c: fixed compilation error.
 
